# engmanager-mcp

./: .gitignore  .mcp.json.example  CLAUDE.md  EXAMPLE_PROCEDURE.md  LICENSE  README.md  SETUP_SUMMARY.md  SPEC.md  pyproject.toml  requirements.txt  test_server.py  test_trowel.py
.github/workflows/: publish.yml
engmanager_mcp/: __init__.py  server.py
engmanager_mcp/config/: __init__.py  settings.py
engmanager_mcp/resources/: __init__.py  procedures.py
engmanager_mcp/tools/: __init__.py  workflow.py
engmanager_mcp/utils/: __init__.py  errors.py  parser.py
procedures/: .gitkeep  example-config.json  example-workflow.md
