[project]
name = "engmanager-mcp"
version = "1.0.2"
description = "MCP server providing workflow guidance and next-step instructions for LLM development workflows"
authors = [{name = "Simon Carr", email = "simon.carr@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "workflow", "development", "llm", "automation", "procedures"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
engmanager-mcp = "engmanager_mcp.server:main"

[project.urls]
Homepage = "https://github.com/scarr7981/engmanager-mcp"
Documentation = "https://github.com/scarr7981/engmanager-mcp/blob/main/README.md"
Repository = "https://github.com/scarr7981/engmanager-mcp"
Issues = "https://github.com/scarr7981/engmanager-mcp/issues"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["engmanager_mcp*"]
exclude = ["procedures*"]  # Excluded from PyPI - users create their own in ~/.config/engmanager-mcp/

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
